<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_poi"
        android:icon="@drawable/baseline_add_location_alt_24"
        android:title="@string/add_poi"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_keep_screen_on"
        android:icon="@drawable/baseline_lock_open_24"
        android:title="@string/screen_stay_awake_off"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_toggle_plot_mode"
        android:icon="@drawable/baseline_planner_review_24"
        android:title="@string/time_plot_switch_to_kernel_estimator"
        app:showAsAction="always" />
</menu>
